[gd_scene load_steps=9 format=3 uid="uid://bdl8tfjfrdyfe"]

[ext_resource type="Script" path="res://Assets/Port v2/syrup_port.gd" id="1_3c01k"]
[ext_resource type="Texture2D" uid="uid://c8t48kqqxo3ey" path="res://Assets/Opdelt porte/brownsugar_port_h.png" id="2_calgd"]
[ext_resource type="Texture2D" uid="uid://d2388wjgfy2q6" path="res://Assets/Opdelt porte/brownsugar_port_v.png" id="3_yrsjl"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_t1r3p"]
size = Vector2(67, 20)

[sub_resource type="Animation" id="Animation_tqo36"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("syrup_h:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(17, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("syrup_v:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-13, 0)]
}

[sub_resource type="Animation" id="Animation_fbcil"]
resource_name = "syrup_port_close"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("syrup_h:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(33, 0), Vector2(17, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("syrup_v:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(-33, 0), Vector2(-13, 0)]
}

[sub_resource type="Animation" id="Animation_jj4qx"]
resource_name = "tapioka_port_opsen_2"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("syrup_h:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(17, 0), Vector2(33, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("syrup_v:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(-13, 0), Vector2(-33, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_dea28"]
_data = {
"RESET": SubResource("Animation_tqo36"),
"syrup_port_close": SubResource("Animation_fbcil"),
"syrup_port_open": SubResource("Animation_jj4qx")
}

[node name="syrup_port" type="StaticBody2D"]
script = ExtResource("1_3c01k")

[node name="syrup_h" type="Sprite2D" parent="."]
position = Vector2(17, 0)
texture = ExtResource("2_calgd")

[node name="syrup_v" type="Sprite2D" parent="."]
position = Vector2(-13, 0)
texture = ExtResource("3_yrsjl")

[node name="syrup_port_collision" type="CollisionShape2D" parent="."]
position = Vector2(0.5, 0)
shape = SubResource("RectangleShape2D_t1r3p")

[node name="ap_syrup" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_dea28")
}

[node name="Timer" type="Timer" parent="."]

[connection signal="timeout" from="Timer" to="." method="close_port"]
